fixed the extra space probelm

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,8 @@
   scroll-behavior: smooth;
 }
 
+
+
 ::-webkit-scrollbar{
   width: 9px;
   
@@ -59,6 +61,7 @@
 .App {
   background: var(--background);
   padding: 0% 7%;
+  overflow: hidden;
 }
 
 h2 {
